# sdl3-audio-player

./: CMakeLists.txt  README.md
src/: main.c
